--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 #header{
   height: 160px;
   color: orange;
-  background-color: #008080;
+  background-color: Teal;
 }
 body {
-  background-color: #008080;
+  background-color: Teal;
   color: orange;
   font-family: Arial;
 }
