--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   background-color: Teal;
 }
 body {
-  background-color: Teal;
+  background-color: rgb(255,0,255);
   color: orange;
   font-family: Arial;
 }
