--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #header{
   height: 160px;
   color: orange;
-  background-color: Teal;
+  background-color: #25D1E8;
 }
 body {
   background-color: rgb(255,0,255);
