--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   background-color: #25D1E8;
 }
 body {
-  background-color: rgb(255,0,255);
+  background-color: #06AEC4;
   color: orange;
   font-family: Arial;
 }
