--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 #header{
   height: 160px;
   color: orange;
-  background-color: #25D1E8;
+  background-color: #77AEF7;
 }
 body {
-  background-color: #06AEC4;
+  background-color: #77AEF7;
   color: #F25805;
   font-family: Arial;
 }
