--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #header{
   height: 160px;
   color: orange;
-  background-color: #55AABD;
+  background-color: #2C9ADE;
 }
 body {
   background-color: #77AEF7;
